# Ecommerce_nest

./: .env.example  .gitignore  CODEBASE_ANALYSIS.md  DEVELOPMENT_PLAN.md  DJANGO_TO_RUST_COMPARISON.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MISSING_ENDPOINTS_SUMMARY.txt  README.md  SETUP.md  db.sqlite3  package.json  requirements.txt  tsconfig.json
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
api/: schema.py
authentication/: __init__.py  admin.py  apps.py  models.py  schema.py  serializers.py  services.py  urls.py  views.py
blog/: admin.py  models.py  urls.py  utils.py  views.py
categories/: admin.py  context_processors.py  models.py  urls.py  views.py
client/: index.html  package.json  (+1 more)
rust-backend/: .env.example  Cargo.toml  README.md  diesel.toml
rust-backend/migrations/2024_01_01_000000_create_tables/: down.sql  up.sql
rust-backend/src/: main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/controllers/: admin_controller.rs  auth_controller.rs  blog_controller.rs  cart_controller.rs  contact_controller.rs  home_controller.rs  mod.rs  order_controller.rs  product_controller.rs  upload_controller.rs  vendor_controller.rs  webhook_controller.rs
rust-backend/src/db/: mod.rs
rust-backend/src/dto/: auth.rs  common.rs  mod.rs  order.rs  product.rs
rust-backend/src/middlewares/: auth.rs
rust-backend/src/models/: blog.rs  mod.rs  order.rs  product.rs  settings.rs  user.rs
rust-backend/src/routes/: mod.rs
rust-backend/src/schema/: mod.rs
rust-backend/src/services/: auth_service.rs  mod.rs  order_service.rs  product_service.rs  user_service.rs
rust-backend/src/utils/: errors.rs  image.rs  mod.rs  slug.rs
(+371 files in other folders)
