[package]
name = "ecommerce-backend"
version = "0.1.0"
edition = "2021"
authors = ["E-Commerce Team"]
description = "E-Commerce Backend API - Rust/Axum/Diesel Migration"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database - Diesel with MySQL
diesel = { version = "2.1", features = ["mysql", "r2d2", "chrono", "numeric", "uuid"] }
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP Client (for payment gateways)
reqwest = { version = "0.11", features = ["json"] }

# Image processing
image = "0.24"

# Slug generation
slug = "0.1"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Decimal for money
rust_decimal = { version = "1", features = ["serde", "db-diesel2-mysql"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ecommerce-backend"
path = "src/main.rs"
